project(jsonconvert)
SET(${PROJECT_NAME}_SRC JSONConvert.cpp)
add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SRC})
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER ${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME} caveexpress-shared common ports ${YAJL_LIBRARY})

project(soundmapper)
SET(${PROJECT_NAME}_SRC SoundMapper.cpp)
add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SRC})
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER ${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME} caveexpress-shared common ports)
