project(cavepacker)
add_executable(${PROJECT_NAME} CavePacker.cpp)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER ${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-server ${PROJECT_NAME}-client ${PROJECT_NAME}-shared main)
texturepacker(${PROJECT_NAME} cavepacker-entity)
texturepacker(${PROJECT_NAME} cavepacker-environment)
texturepacker(${PROJECT_NAME} cavepacker-ui-fonts)
texturepacker(${PROJECT_NAME} cavepacker-ui-scene)
texturepacker(${PROJECT_NAME} cavepacker-ui)
textures(${PROJECT_NAME})